--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -11,8 +11,17 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+  serial:
+    runs-on: ubuntu-latest
+    outputs:
+      serial: ${{ steps.serial.outputs.serial }}
+    steps:
+      - name: Epoch秒でのシリアル値を生成しておく
+        id: serial
+        run: echo "serial=$(date +%s)" >> $GITHUB_OUTPUT
   docker:
     runs-on: ubuntu-latest
+    needs: serial
     permissions:
       contents: read
       packages: write
@@ -33,6 +42,8 @@ jobs:
           # latestタグも追加
           flavor: |
             latest=${{ github.ref == 'refs/heads/main' }}
+          tags: |
+            type=raw,value=${{ needs.serial.outputs.serial }}
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: Build and push Docker image
