--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,3 +7,8 @@ updates:
     commit-message:
       prefix: "deps"
     open-pull-requests-limit: 5
+    allow:
+      - dependency-name: "mysql"
+    assignees:
+      - densuke
+      - densuke-st
