--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,8 +52,6 @@ jobs:
                 done
                 echo "dbサービスがhealthyになりました"
                 exit 0
-            - name: 少し待つ
-              run: sleep 5
             - name: 環境変数確認
               run: |
                 cd tests
@@ -66,6 +64,6 @@ jobs:
             - name: テスト後のクリーンアップ
               run: |
                 cd tests
-                docker compose down --rmi all -v
+                docker compose down --rmi all -v -t 1
                 docker volume prune -f
                 docker network prune -f
