--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,7 @@ jobs:
                   fi
                 done
                 echo "dbサービスがhealthyになりました"
+                sleep 5
                 exit 0
             - name: テスト実行
               run: |
